mojara estructura carpetas y codigo2

--- a/src/app/alertDialog/components/alert-dialogo/alert-dialogo.component.html
+++ b/src/app/alertDialog/components/alert-dialogo/alert-dialogo.component.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="./css/dialog.css">
+    <link rel="stylesheet" href="./alert-dialogo.component.css">
 </head>
-
 <body>
     <div id="header"></div>
     <div class="prompt-content">
@@ -21,7 +19,7 @@
         <button type="submit" class="btn-rounded btn--blue" id="min-button-ok">Insertar</button>
         <button type="submit" class="btn-rounded btn--grey" id="min-button-cancel">Cancelar</button>
     </div>
-    <script src="./renderer.js"></script>
+    <script src="./alert-dialogo.renderer.js"></script>
 </body>
 
 </html>
